# capitalism

./: .gitignore  CMakeLists.txt  README.md  build.sh  capitalism.conf  main.cpp
src/: capitalismClass.cpp  capitalismClass.h  clean.sh  main.cpp
src/v1/: CMakeLists.txt  capitalismClass.cpp  capitalismClass.h
src/v2/: CMakeLists.txt  capitalism_simulator.cpp  capitalism_simulator.hpp  clean_code.sh  config_parser.cpp  config_parser.hpp  main.cpp
